- Removed scrollbar from <html/> - Added Report Bugs button in drawer

--- a/src/style.css
+++ b/src/style.css
@@ -5,3 +5,7 @@
  *   Created by Fatih Balsoy on 5/3/23
  *   Copyright © 2023 Fatih Balsoy. All rights reserved.
  */
+
+html {
+    overflow: hidden;
+}
